// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONParser Auto Columns Table 1`] = `
{
  "columns": [
    {
      "selector": "name",
      "text": "name",
      "type": "string",
    },
    {
      "selector": "age",
      "text": "age",
      "type": "number",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      20,
    ],
    [
      "bar",
      25,
    ],
    [
      "baz",
      30,
    ],
  ],
}
`;

exports[`JSONParser Basic 1`] = `
{
  "columns": [],
  "name": "",
  "rows": [],
}
`;

exports[`JSONParser With Columns & Root Selector 1`] = `
{
  "columns": [
    {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
    {
      "selector": "age",
      "text": "Age",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      "20",
    ],
    [
      "bar",
      "25",
    ],
    [
      "baz",
      "30",
    ],
  ],
}
`;

exports[`JSONParser With Columns & Root Selector 2`] = `
{
  "columns": [
    {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
    {
      "selector": "age",
      "text": "Age",
      "type": "number",
    },
    {
      "selector": "year",
      "text": "Year",
      "type": "timestamp",
    },
    {
      "selector": "date",
      "text": "Date",
      "type": "timestamp_epoch",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      20,
      2010-01-01T00:00:00.000Z,
      2010-01-01T00:00:00.000Z,
    ],
    [
      "bar",
      25,
      2011-01-01T00:00:00.000Z,
      2011-01-01T00:00:00.000Z,
    ],
    [
      "baz",
      30,
      2012-01-01T00:00:00.000Z,
      2012-01-01T00:00:00.000Z,
    ],
    [
      "apple",
      32,
      2013-12-25T00:00:00.000Z,
      2013-12-25T00:00:00.000Z,
    ],
  ],
}
`;

exports[`JSONParser With Columns 1`] = `
{
  "columns": [
    {
      "selector": "name",
      "text": "Name",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
    ],
    [
      "bar",
    ],
  ],
}
`;
